bk_ida/gccida/c0/find_equiv_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:6783:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a3, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:6787:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:6938:31: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( flag_float_store && mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)goal)] == MODE_FLOAT ) 
                              ^~~~~~~~~~~~
                              mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7004:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[1]; 
          ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7012:61: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v104 = ( unsigned __int16)**( _DWORD **)&p[2] == 47 ? ( rtx)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                            ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7030:30: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
valtry = (  struct rtx_def *)v103[1]; 
                             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7060:30: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
valtry = (  struct rtx_def *)v103[1]; 
                             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7084:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)tem->fld[0].rtwint)] == MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7112:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)tema->fld[0].rtwint)] == MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7180:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7181:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v102 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7213:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v98 = ( unsigned __int16)**( _DWORD **)&p[2] == 47 ? ( rtx)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                                           ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7260:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7261:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v96 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7314:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7315:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v92 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7361:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7362:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v88 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/reload.c:7409:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_equiv_reg/src/obj/reload.o] Error 1
